--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
       <url>git@github.com:iipc/webarchive-commons.git</url>
    </scm>
 
+   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <build.time>${maven.build.timestamp}</build.time>
@@ -98,7 +99,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>0.20.2-cdh3u4</version>
+      <version>2.0.0-mr1-cdh4.6.0</version>
       <exclusions>
         <exclusion>
           <groupId>commons-httpclient</groupId>
@@ -134,11 +135,25 @@
         </exclusion>                
       </exclusions> 
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.0.0-cdh4.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-common</artifactId>
+      <version>2.0.0-cdh4.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-core</artifactId>
+      <version>2.0.0-cdh4.6.0</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.pig</groupId>
       <artifactId>pig</artifactId>
-      <version>0.10.0</version>
+      <version>0.12.1</version>
       <scope>provided</scope>
     </dependency>
 
@@ -164,12 +179,12 @@
       <artifactId>dsiutils</artifactId>
       <version>2.0.12</version>
       <scope>compile</scope>
-      <exclusions>
+     <exclusions>
         <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-        </exclusion>
-      </exclusions>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+      </exclusion>
+    </exclusions>      
     </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
