--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,6 @@
       <url>git@github.com:iipc/webarchive-commons.git</url>
    </scm>
 
-   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <build.time>${maven.build.timestamp}</build.time>
@@ -99,7 +98,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>2.0.0-mr1-cdh4.6.0</version>
+      <version>0.20.2-cdh3u4</version>
       <exclusions>
         <exclusion>
           <groupId>commons-httpclient</groupId>
@@ -135,25 +134,11 @@
         </exclusion>                
       </exclusions> 
     </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
-      <version>2.0.0-cdh4.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-mapreduce-client-common</artifactId>
-      <version>2.0.0-cdh4.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-mapreduce-client-core</artifactId>
-      <version>2.0.0-cdh4.6.0</version>
-    </dependency>
+
     <dependency>
       <groupId>org.apache.pig</groupId>
       <artifactId>pig</artifactId>
-      <version>0.12.1</version>
+      <version>0.10.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -179,12 +164,12 @@
       <artifactId>dsiutils</artifactId>
       <version>2.0.12</version>
       <scope>compile</scope>
-     <exclusions>
+      <exclusions>
         <exclusion>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-      </exclusion>
-    </exclusions>      
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
