--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.netpreserve.commons</groupId>
   <artifactId>webarchive-commons</artifactId>
-  <version>1.1.1-${build.tag}SNAPSHOT</version>
+  <version>1.1.1-cdh5-${build.tag}SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>webarchive-commons</name>
@@ -98,7 +98,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>0.20.2-cdh3u4</version>
+      <version>2.3.0-mr1-cdh5.0.1</version>
       <exclusions>
         <exclusion>
           <groupId>commons-httpclient</groupId>
@@ -135,10 +135,27 @@
       </exclusions> 
     </dependency>
 
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.3.0-cdh5.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-common</artifactId>
+      <version>2.3.0-cdh5.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-core</artifactId>
+      <version>2.3.0-cdh5.0.1</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.pig</groupId>
       <artifactId>pig</artifactId>
-      <version>0.10.0</version>
+      <version>0.12.0</version>
       <scope>provided</scope>
     </dependency>
 
