--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <version>2.3.0-cdh5.0.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.hadoop</groupId>
+    	<artifactId>hadoop-hdfs</artifactId>
+    	<version>2.3.0-cdh5.0.1</version>
+    	<scope>runtime</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.pig</groupId>
