--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <version>2.3.0-cdh5.0.1</version>
+      <exclusions>
+        <exclusion>
+            <artifactId>jasper-compiler</artifactId>
+            <groupId>tomcat</groupId>
+        </exclusion>
+        <exclusion>
+                <artifactId>jasper-runtime</artifactId>
+                <groupId>tomcat</groupId>
+        </exclusion>
+        <exclusion>
+                <artifactId>jsp-api</artifactId>
+                <groupId>javax.servlet.jsp</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -156,6 +170,16 @@
     	<artifactId>hadoop-hdfs</artifactId>
     	<version>2.3.0-cdh5.0.1</version>
     	<scope>runtime</scope>
+        <exclusions>
+          <exclusion>
+            <artifactId>jasper-runtime</artifactId>
+            <groupId>tomcat</groupId>
+          </exclusion>
+          <exclusion>
+            <artifactId>jsp-api</artifactId>
+            <groupId>javax.servlet.jsp</groupId>
+          </exclusion>
+        </exclusions>
     </dependency>
 
     <dependency>
@@ -163,6 +187,16 @@
       <artifactId>pig</artifactId>
       <version>0.12.0</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>jasper-compiler</artifactId>
+          <groupId>tomcat</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>jasper-runtime</artifactId>
+          <groupId>tomcat</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
